# Data-Science-Project

./: .gitignore  .gitlab-ci.yml  LICENSE  NOTES.md  README.md  Tuples.py  pyproject.toml  requirements.txt  setup.py  sync_test.txt
.github/: dependabot.yml
Java-To-Python-Conversion/: AverageGrades.java  AverageGrades.py  Hello.java  Hello.py  IceCream.java  IceCream.py  SevenSegment.java  SortComparison.java  Volume.java  desktop.ini  settings.json
Python/: Add.py  AnnualRateCalculator.py  Area.py  AreaOfCircle.py  AreaOfTriangle.py  BasicDistanceCalulator.py  BasicFileWriter.py  BasicShoppingCheckout.py  CircumferenceOfCircle.py  Conditions.py  CosineRule.py  Dictionaries.py  Exceptions.py  Factorials.py  Fahrenheit&CelciusConverter.py  Functions.py  GradeBoundaryCalculator.py  GuessingGame.py  Haiku-Madlibs.py  LeapYear.py  Lists.py  LoopExercise.py  NumberGuessingGame.py  Numbers.py  PerimeterOfTriangle.py  PhoneConverter.py  PrimeNumbers.py  PythagorasTheorm.py  RomanNumeralsConverter.py  ShoppingCheckout.py  SimpleGradeBoundaryCalculator.py  SimpleLoginStatus.py  SineRule.py  Square.py  Strings.py  TimeConverter.py  TriangleCalculator.py  Tuples.py  TypeConversion-TypeCasting.py  TypeConversion.py  (+3 more)
Python/Algorithms&DataConverters/: Fahrenheit&CelciusConverter.py  PhoneConverter.py
Python/FundementalTopics/: Conditions.py  Exceptions.py  Formats.py  Lists.py  (+1 more)
tests/: __init__.py  conftest.py  test_algorithmic_data.py  test_algorithms.py  test_fundamentals.py  test_logic.py  test_math_science.py  test_maths_science.py  test_sample.py  test_syntax.py
(+98 files in other folders)
