[build-system]
requires = ["setuptools>=68.0", "wheel", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my_data_science_project"
version = "0.1.0"
description = "A personal project to advance my career in data science as a whole"
dependencies = ["pytest>=8.0.0",]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# Ignore specific rules:
# E701: multiple statements on one line (used in match-case blocks)
# E712: comparing booleans using == or != (used in conditions playground)
# F401: unused imports (like 'import math' when experimenting)
ignore = ["E701", "E712", "F401"]

[tool.black]
line-length = 88
target-version = ["py314"]

[tool.pytest.ini_options]
pythonpath = ["python"]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--strict-markers --disable-warnings"
pythonpath = ["."]

